# C_exercises

./: README.md  arithmetic_mean.c  bitwise_left_shift.c  find_factorial.c  is_number_square.c  length_of_string.c  multiplication_table.c  sum_array.c
NeonBlaster_GAME/: CMakeLists.txt  README.md
NeonBlaster_GAME/src/: main.c
